# exru

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  bootstrap.sh  build.sh  clean.sh  install.sh
Formula/: libexru.rb
cmake/Modules/: FindOpenEXR.cmake
config/: CMakeLists.txt  config.h.in
src/: config.h  exru.cpp  exru.h
