cmake_minimum_required(VERSION 2.8)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
project(exru)
set (EXRU_VERSION_MAJOR 0)
set (EXRU_VERSION_MINOR 3)
set (EXRU_VERSION_STRING ${EXRU_VERSION_MAJOR}.${EXRU_VERSION_MINOR})
include_directories(src) 
FIND_PACKAGE(OpenEXR REQUIRED COMPONENTS )
add_subdirectory(config)

set(SOURCES)
set(SOURCES ${SOURCES} src/exru.cpp)
set(SOURCES ${SOURCES} src/exru.h)
source_group(exru FILES src/exru.cpp src/exru.h)
add_library(exru SHARED ${SOURCES})
include_directories(${OPENEXR_INCLUDE_DIRS})
target_link_libraries(exru ${OPENEXR_LIBRARIES})
set_target_properties(exru PROPERTIES VERSION ${EXRU_VERSION_STRING})

install (TARGETS exru DESTINATION lib)
install (FILES src/exru.h DESTINATION include/exru)

